Fix 2nd Circle Overflow Problems

--- a/week3/style.css
+++ b/week3/style.css
@@ -107,8 +107,7 @@ th:hover, td:hover {
     transition-timing-function: ease-in-out;
 }
 
-#section-1::before {
-    /* Fake Circle */
+.full-width::before {
     content: "";
     position: absolute;
     z-index: -1;
@@ -122,17 +121,18 @@ th:hover, td:hover {
     outline: 8rem rgba(255, 255, 255, .05) solid;
 }
 
-/* #circle-2::before {
+/* https://stackoverflow.com/questions/306062/css3-selector-to-find-the-2nd-div-of-the-same-class */
+#circle-2 {
     content: "";
     transform: rotate(var(--rotation));
     position: relative;
     z-index: -1;
-    width: 500px;
-    height: 1000px;
-    left: 50vw;
+    width: 65vw;
+    aspect-ratio: 1;
+    left: 45vw;
     border-radius: 50%;
     border: 4rem rgba(255, 255, 255, .05) dotted;
-}  */
+} 
 
 
 blockquote {
@@ -191,13 +191,26 @@ footer ul {
 /* Classes */
 
 section.space {
-    height: 1000px;
+    height: 500px;
 }
 
 .col {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.full-width {
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    top: 0;
+    left: 0;
+    opacity: .5;
+    overflow: hidden;
+    float: right;
 }
 
 /* Media */
